Updated - added notes

--- a/Data_Science_Mastery/Sec1_Introduction.ipynb
+++ b/Data_Science_Mastery/Sec1_Introduction.ipynb
@@ -57,7 +57,7 @@
    "metadata": {},
    "source": [
     "# **<ins>Module 2: Data Cleaning and Preprocessing - Turning Raw Data into Usable Insights</ins>**\n",
-    "* Data Cleaning and Preprocessing is the second critical stage in the data science workflow.\n",
+    "* <ins>Data Cleaning and Preprocessing</ins> is the second critical stage in the data science workflow.\n",
     "* Raw data is often messy, inconsistent, and filled with errors, missing values, or duplicate entries.\n",
     "\n",
     "### **<ins>What is Data Cleaning and Preprocessing?</ins>**\n",
@@ -98,7 +98,59 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# **<ins>Module 3: </ins>**"
+    "# **<ins>Module 3: Data Exploration and Analysis (EDA)</ins>**\n",
+    "* <ins>Data Exploration and Analysis (EDA)</ins> is one of the most critical stages in the Data Science workflow.\n",
+    "* EDA serves as a bridge between raw data and actionable insights, allowing data scientists to understand data patterns, relationships, and anomalies before building models.\n",
+    "    * Involves summarizing data, visualizing trends, and forming hypotheses that guide the rest of the analysis or machine-learning process.\n",
+    "\n",
+    "### **<ins>What is Exploratory Data Analysis (EDA)?</ins>**\n",
+    "* EDA is the process of examining datasets to summarize their key characteristics using statistical techniques and visualization tools.\n",
+    "* It's about asking questions, identifying patterns, uncovering relationships between variables, and detecting anomalies or outliers.\n",
+    "* EDA is iterative and investigative, often revealing insights that might not be obvious at first glance. At its core, EDA aims to: \n",
+    "    * Understand the structure and quality of the data.\n",
+    "    * Identify patterns, trends, and anomalies.\n",
+    "    * Validate assumptions and hypotheses.\n",
+    "    * Decide on the best preprocessing techniques and model choices.\n",
+    "\n",
+    "### **<ins>Why is EDA important?</ins>**\n",
+    "* <ins>Understand Data Distribution</ins>: Identify how variables are distributed (normal, skewed, *etc.*).\n",
+    "* <ins>Identify Outliers and Anomalies</ins>: Detect extreme or unusual values that could impact modeling.\n",
+    "* <ins>Spot Missing Values</ins>: Understand where and why data might be missing.\n",
+    "* <ins>Form Hypotheses</ins>: Generate assumptions about relationships between variables.\n",
+    "* <ins>Feature Selection</ins>: Identify the most important features for analysis.\n",
+    "* <ins>Prevent Costly Mistakes</ins>: Ensure that data is well-prepared before building predictive models.\n",
+    "\n",
+    "### **<ins>Key Concepts in EDA</ins>**\n",
+    "* <ins>Data Summary and Descriptive Statistics</ins>\n",
+    "    * <ins>Statistical Measures</ins>: Mean, median, mode, variance, standard deviation\n",
+    "    * <ins>Data Distribution</ins>: Histograms, density plots, and box plots to visualize variable distributions\n",
+    "* <ins>Data Visualization</ins>:\n",
+    "    * <ins>Univariate Analysis</ins>: Analyzing one variable at a time (*e.g.* bar plots, histograms)\n",
+    "    * <ins>Bivariate Analysis</ins>: Exploring relationships between two variables (*e.g.* scatter plots, heatmaps)\n",
+    "    * <ins>Multivariate Analysis</ins>: Analyzing relationships among multiple variables\n",
+    "* <ins>Outlier Detection</ins>\n",
+    "    * Outliers can distort analysis. Techniques to deal with outliers:\n",
+    "        * Z-Score Analysis\n",
+    "        * IQR (Interquartile Range) Method\n",
+    "* <ins>Correlation Analysis</ins>\n",
+    "    * <ins>Correlation Matrix</ins>: Understand relationships between numerical features.\n",
+    "    * <ins>Heatmap</ins>: Visualize correlations graphically.\n",
+    "* <ins>Missing Data Analysis</ins>\n",
+    "    * Understand where data is missing and decide on strategies: drop, impute, or flag.\n",
+    "\n",
+    "### **<ins>Best Practices for EDA</ins>**\n",
+    "* <ins>Ask Clear Questions</ins>: Know the objective behind the analysis.\n",
+    "* <ins>Start Simple</ins>: Begin with descriptive statistics before moving to complex visualizations.\n",
+    "* <ins>Document Your Findings</ins>: Keep detailed notes and visualizations.\n",
+    "* <ins>Iterate Frequently</ins>: Go back and forth between visualizations and summaries.\n",
+    "* <ins>Focus on Storytelling</ins>: Translate data insights into actionable business recommendations."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# **<ins>Module 4: </ins>**"
    ]
   },
   {
