Updated - added notes

--- a/Data_Science_Mastery/Sec1_Introduction.ipynb
+++ b/Data_Science_Mastery/Sec1_Introduction.ipynb
@@ -150,7 +150,57 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# **<ins>Module 4: </ins>**"
+    "# **<ins>Module 4: Feature Engineering Transforming Data into Insights</ins>**\n",
+    "* <ins>Feature Engineering</ins> is often considered the heart of data science and machine-learning.\n",
+    "    * It bridges the gap between raw data and model performance by creating, selecting, and optimizing features that enable algorithms to make accurate predictions.\n",
+    "    * In essence, better features mean better models.\n",
+    "\n",
+    "### **<ins>What is Feature Engineering?</ins>**\n",
+    "* Feature Engineering is the process of selecting, transforming, or creating new features (variables) from raw data to improve the performance of machine-learning models.\n",
+    "* Features are the input variables that an algorithm uses to make predictions, and their quality directly affects the model's accuracy and reliability.\n",
+    "* Imagine building a house: data is the raw material, the algorithm is the architect, and features are the building blocks.\n",
+    "* Well-engineered features ensure a solid foundation for your model.\n",
+    "\n",
+    "### **<ins>Why is Feature Engineering important?</ins>**\n",
+    "* <ins>Improves Model Accuracy</ins>: Well-crafted features can significantly boost model performance.\n",
+    "* <ins>Reduces Noise</ins>: Eliminate irrelevant or redundant information.\n",
+    "* <ins>Handles Complex Relationships</ins>: Create features that capture hidden patterns in data.\n",
+    "* <ins>Simplifies Models</ins>: Better features can reduce the need for overly complex models.\n",
+    "* <ins>Boosts Interpretability</ins>: Meaningful features make it easier to understand model predictions. \n",
+    "\n",
+    "### **<ins>Key Concepts in Feature Engineering</ins>**\n",
+    "* <ins>Feature Creation</ins>\n",
+    "    * Combine or extract information from existing features to create new ones.\n",
+    "    * Ex. From a date column, create day, month, and year as separate features.\n",
+    "* <ins>Handling Categorical Features</ins>\n",
+    "    * <ins>One-Hot Encoding</ins>: Create binary columns for each category.\n",
+    "    * <ins>Label Encoding</ins>: Assign a unique integer to each category.\n",
+    "* <ins>Handling Numerical Features</ins>\n",
+    "    * <ins>Scaling</ins>: Adjust numerical values to a specific range (*e.g.* 0 to 1).\n",
+    "    * <ins>Standardization</ins>: Center data around zero with unit variance.\n",
+    "* <ins>Handling Missing Data in Features</ins>\n",
+    "    * Impute missing values with statistical measures like mean, median, or mode.\n",
+    "* <ins>Feature Transformation</ins>\n",
+    "    * <ins>Log Transformation</ins>: Reduces the effect of extreme values.\n",
+    "    * <ins>Polynomial Features</ins>: Create non-linear relationships.\n",
+    "* <ins>Feature Selection Techniques</ins>\n",
+    "    * <ins>Filter Methods</ins>: Correlation, Chi-Square test\n",
+    "    * <ins>Wrapper Methods</ins>: Recursive Feature Elimination (RFE)\n",
+    "    * <ins>Embedded Methods</ins>: LASSO Regression, Tree-based Importance\n",
+    "\n",
+    "### **<ins>Best Practices for Feature Engineering</ins>**\n",
+    "* <ins>Understand Your Data</ins>: Know what each feature represents and how it impacts the target variable.\n",
+    "* <ins>Avoid Data Leakage</ins>: Ensure that target-related information doesn't leak into features during training.\n",
+    "* <ins>Iterate and Experiment</ins>: Try different transformations and observe model performance.\n",
+    "* <ins>Keep It Interpretable</ins>: Ensure features are meaningful and easy to understand.\n",
+    "* <ins>Use Domain Knowledge</ins>: Sometimes, the best features come from subject matter expertise."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# **<ins>Module 5: </ins>**"
    ]
   },
   {
